# checkio

./: .pre-commit-config.yaml  Pipfile  README.md  isort.cfg  pyproject.toml
checkio/elementary/: absolute_sorting.py  best_stock.py  bigger_price.py  correct_sentence.py  digits_multiplication.py  easy_unpack.py  even_the_last.py  first_word.py  fizz_buzz.py  index_power.py  multiply_intro.py  popular_words.py  say_hi.py  secret_message.py  three_words.py
checkio/home/: all_the_same.py  backward_each_word.py  between_markers.py  count_digits.py  find_quotes.py  house_password.py  most_wanted_letter.py  non_unique_elements.py  split_list.py  sum_numbers.py
