[tool.poetry]
name = "checkio-solutions"
version = "0.1.0"
description = ""
authors = ["Matt Hanson"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
